--- a/Night Owl/Base.lproj/Main.storyboard
+++ b/Night Owl/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D72i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="sSJ-Mp-n4J">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D72i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2KH-bD-tFs">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -153,7 +153,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dzW-lb-ihN">
-                                <rect key="frame" x="0.0" y="388" width="320" height="180"/>
+                                <rect key="frame" x="0.0" y="258" width="320" height="180"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="180" id="dFa-gR-ALR"/>
                                 </constraints>
@@ -162,7 +162,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="dzW-lb-ihN" secondAttribute="trailing" constant="-16" id="3yc-0f-AJj"/>
-                            <constraint firstItem="Zz4-BR-QGn" firstAttribute="top" secondItem="dzW-lb-ihN" secondAttribute="bottom" id="D7N-nX-PLL"/>
+                            <constraint firstItem="Zz4-BR-QGn" firstAttribute="top" secondItem="dzW-lb-ihN" secondAttribute="bottom" constant="130" id="D7N-nX-PLL"/>
                             <constraint firstItem="dzW-lb-ihN" firstAttribute="leading" secondItem="uN1-DW-P6h" secondAttribute="leadingMargin" constant="-16" id="Gr1-x0-eIy"/>
                         </constraints>
                     </view>
@@ -182,8 +182,6 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="pickerHeight" destination="dFa-gR-ALR" id="1OM-00-sRM"/>
-                        <outlet property="pickerOffset" destination="D7N-nX-PLL" id="deI-Vm-Ehm"/>
                         <outlet property="subjectPicker" destination="dzW-lb-ihN" id="2DJ-oE-DNg"/>
                     </connections>
                 </viewController>
@@ -573,24 +571,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9P5-HR-EdQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1284" y="1049"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="bRG-mc-0RG">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="sSJ-Mp-n4J" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="LZY-ij-C1A">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="2KH-bD-tFs" kind="relationship" relationship="rootViewController" id="hb9-h0-l8j"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="94Y-5z-6Mm" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="427" y="395"/>
         </scene>
     </scenes>
     <resources>
