--- a/Night Owl/Base.lproj/Main.storyboard
+++ b/Night Owl/Base.lproj/Main.storyboard
@@ -157,7 +157,7 @@
                                 <action selector="goToQuestions:" destination="sjH-h7-Jt3" id="QMa-OE-29g"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="Settings" id="o3Y-lS-AzI">
+                        <barButtonItem key="rightBarButtonItem" image="Settings" id="o3Y-lS-AzI">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
                                 <action selector="goToSettings:" destination="sjH-h7-Jt3" id="biE-Tl-3pu"/>
@@ -375,7 +375,7 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="Debug Enviroment" id="qiD-3Y-7bv">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="cvj-L7-JBI" style="IBUITableViewCellStyleDefault" id="n77-KR-Yro">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="cvj-L7-JBI" detailTextLabel="iC7-de-aHd" style="IBUITableViewCellStyleValue1" id="n77-KR-Yro">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="n77-KR-Yro" id="cR3-b6-sQg">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -383,7 +383,13 @@
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Change Parse Account" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cvj-L7-JBI">
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="...." textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="iC7-de-aHd">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -411,6 +417,7 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="cardLabel" destination="aO0-ay-iDN" id="6k4-CH-PeC"/>
+                        <outlet property="debugAccount" destination="iC7-de-aHd" id="m3g-sG-Uag"/>
                         <outlet property="freeQuestionsLabel" destination="rUs-JF-STD" id="beh-MC-ReU"/>
                         <outlet property="questionPrice" destination="E20-7z-gWw" id="IY7-tY-oO4"/>
                     </connections>
